src/main/css/bundles/style.css
@import "../config.css";

@import "../components/absence-type-box.css" layer(components);
@import "../components/alert.css" layer(components);
@import "../components/action-link.css" layer(components);
@import "../components/button.css" layer(components);
@import "../components/box.css" layer(components);
@import "../components/checkbox.css" layer(components);
@import "../components/checkbox-switch.css" layer(components);
@import "../components/color-picker.css" layer(components);
@import "../components/dropdown-caret.css" layer(components);
@import "../components/dropdown-menu.css" layer(components);
@import "../components/loading.css" layer(components);
@import "../components/feedback-box.css" layer(components);
@import "../components/form.css" layer(components);
@import "../components/icon-link.css" layer(components);
@import "../components/info-banner.css" layer(components);
@import "../components/launchpad.css" layer(components);
@import "../components/list.css" layer(components);
@import "../components/navigation.css" layer(components);
@import "../components/multi-select.css" layer(base);
@import "../components/modal.css" layer(components);
@import "../components/popover.css" layer(components);
@import "../components/select.css" layer(components);
@import "../components/table.css" layer(components);
@import "../components/tab-list.css" layer(components);
@import "../components/states.css" layer(utilities);
@import "../components/section-heading.css" layer(components);
@import "../components/text-bubble.css" layer(components);
@import "../components/tooltip.css" layer(components);
@import "../components/settings-absence-types.css" layer(components);

@layer base {
  html {
    height: -webkit-fill-available;
  }

  body {
    font-family:
      system-ui,
      -apple-system,
      BlinkMacSystemFont,
      "Segoe UI",
      Roboto,
      "Helvetica Neue",
      Arial,
      "Noto Sans",
      sans-serif,
      "Apple Color Emoji",
      "Segoe UI Emoji",
      "Segoe UI Symbol",
      "Noto Color Emoji";
    font-size: 100%;
    margin: 0;
    color: #444444;
    @apply dark:bg-zinc-900;
    @apply dark:text-zinc-200;
    min-height: 100vh;
    min-height: -webkit-fill-available;
    display: grid;
    grid-template-rows: auto auto 1fr auto;
    grid-template-columns: auto 1fr auto auto;
    grid-template-areas:
      "banner banner banner banner"
      "navigation _ launchpad-app avatar"
      "content content content content";
    overflow: hidden;
    height: 100vh;
  }

  @variant desktop {
    body {
      grid-template-rows: auto auto 1fr auto;
      grid-template-columns: auto 1fr;
      grid-template-areas:
        "banner banner"
        "launchpad-app avatar"
        "navigation content";
    }
  }

  @font-face {
    font-family: "KaushanScript";
    src:
      local("KaushanScript"),
      local("KaushanScript Regular"),
      local("KaushanScript-Regular"),
      url("/fonts/kaushanscript/KaushanScript-Regular.woff2") format("woff2"),
      url("/fonts/kaushanscript/KaushanScript-Regular.woff") format("woff");
    font-display: swap;
  }

  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);

    @variant dark {
      border-color: var(--color-zinc-600, currentColor);
    }
  }

  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }

  dialog {
    margin: auto;
  }

  hr {
    border-color: #d5d5d5;
    @apply dark:border-zinc-600;
  }

  h1 {
    @apply text-2xl;
    @apply font-normal;
    @apply leading-6;
  }
  h2 {
    @apply text-xl;
    @apply font-normal;
    @apply leading-6;
  }
  h3 {
    @apply text-base;
    @apply font-normal;
    @apply leading-6;
  }
  h4 {
    @apply text-base;
    @apply font-normal;
    @apply leading-6;
  }
  h5 {
    @apply text-base;
    @apply font-normal;
    @apply leading-6;
  }
  h6 {
    @apply text-base;
    @apply font-normal;
    @apply leading-6;
  }

  button,
  input:is([type="submit"], [type="reset"], [type="button"]),
  [role="button"] {
    cursor: pointer;
    &[disabled] {
      cursor: default;
    }
  }

  a {
    cursor: pointer;
    text-decoration: none;
    color: #2a6496;
    @apply dark:text-sky-500;

    &:hover,
    &:focus,
    &:active {
      color: #1896db;
      @apply dark:text-sky-400;
      text-decoration: underline;
    }

    &:focus {
      outline: 5px auto -webkit-focus-ring-color;
      outline-offset: -2px;
    }
  }
}

@layer components {
  .top-bar-content-separator {
    border-top: 1px solid var(--color-gray-100);

    @variant dark {
      border-color: var(--color-zinc-800);
    }
  }

  .content-container {
    @apply max-w-7xl;
    margin-left: auto;
    margin-right: auto;
    padding: calc(var(--spacing) * 8);
    padding-bottom: 0;
  }

  .account-form-expire-description {
    @apply text-base;
    @apply dark:text-zinc-100;
  }

  .account-form-expire-description a {
    @apply underline;
    @apply text-current!;
    @apply hover:text-gray-900!;
    @apply dark:hover:text-zinc-100!;
  }

  .account-form-expire-description em {
    @apply not-italic;
    @apply font-bold;
  }

  .modal-dialog {
    margin-top: 77px;
    z-index: 2000;
  }
}

